force-app/main/default/objects/VAT__c/VAT__c.object-meta.xml
<CustomObject>
    <label>VAT</label>
    <nameField>
        <displayFormat>VAT-{0000}</displayFormat>
        <label>VAT Rule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VAT</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>