force-app/main/default/objects/VAT__c/fields/Nexus__c.field-meta.xml
<CustomField>
    <fullName>Nexus__c</fullName>
    <label>Nexus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sweden</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Luxembourg</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>