force-app/main/default/objects/VAT__c/fields/NexusCountry__c.field-meta.xml
<CustomField>
    <fullName>NexusCountry__c</fullName>
    <label>Nexus Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BE</fullName>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>NL</fullName>
                <label>Netherlands</label>
            </value>
            <value>
                <fullName>SE</fullName>
                <label>Sweden</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>