force-app/main/default/objects/VAT__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <label>Subsidiary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subsidiary</valueSetName>
    </valueSet>
</CustomField>