force-app/main/default/objects/VAT__c/fields/TaxCode__c.field-meta.xml
<CustomField>
    <fullName>TaxCode__c</fullName>
    <label>Tax Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S-BE</fullName>
            </value>
            <value>
                <fullName>SR-BE</fullName>
            </value>
            <value>
                <fullName>R-NL</fullName>
            </value>
            <value>
                <fullName>S-NL</fullName>
            </value>
            <value>
                <fullName>R-SE</fullName>
            </value>
            <value>
                <fullName>S-SE</fullName>
            </value>
            <value>
                <fullName>SR-SE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>