force-app/main/default/objects/VAT__c/fields/ValidUntil__c.field-meta.xml
<CustomField>
    <fullName>ValidUntil__c</fullName>
    <label>Valid Until</label>
    <type>Date</type>
</CustomField>