force-app/main/default/objects/VAT__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Subsidiary__c</columns>
    <columns>TaxCode__c</columns>
    <columns>Description__c</columns>
    <columns>Rate__c</columns>
    <columns>Product__c</columns>
    <columns>Nexus__c</columns>
    <columns>NexusCountry__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>